--- a/study-relationship/src/main/resources/application.yml
+++ b/study-relationship/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study_relationship
     username: root
-    password: Godblessyou_forever1@#
+    password: root
     
   jpa:
     show-sql: true
