--- a/study-relationship/src/main/resources/application.yml
+++ b/study-relationship/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 
 server:
   port: 8081
-
 spring:
   application:
     name: study-relationship
@@ -10,10 +9,12 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study_relationship
     username: root
-    password: root
+    password: Godblessyou_forever1@#
     
   jpa:
     show-sql: true
     open-in-view: true
     hibernate:
       ddl-auto: update
+  main:
+    allow-bean-definition-overriding: true
